PROJECT(mISDNnotiy)

cmake_policy(VERSION 2.6)
cmake_minimum_required(VERSION 2.6)

INCLUDE(CheckLibraryExists)
INCLUDE(CheckIncludeFiles)
INCLUDE(FindPkgConfig)

# Setup package meta-data
SET(PACKAGE "mISDNnotiy")
SET(VERSION "0.0.4")
SET(PACKAGE_TARNAME "mISDNnotiy")
SET(PACKAGE_BUGREPORT " ")
SET(PACKAGE_NAME "mISDNnotiy")
SET(PACKAGE_VERSION "-")
SET(PACKAGE_STRING "mISDNnotiy-")
SET(OPERATING_SYSTEM "${CMAKE_SYSTEM_NAME}")

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

FIND_PACKAGE(CURL)

PKG_CHECK_MODULES(DBUSGLIB REQUIRED dbus-glib-1)

IF(CURL_FOUND)
	CHECK_INCLUDE_FILES("curl/curl.h" HAVE_LIBCURL)
	INCLUDE_DIRECTORIES( ${CURL_INCLUDES} )
	LINK_LIBRARIES( ${CURL_LIBRARIES} )
ENDIF(CURL_FOUND)

IF(DBUSGLIB_FOUND)
	SET(HAVE_DBUSGLIB 1)
	INCLUDE_DIRECTORIES(${DBUSGLIB_INCLUDE_DIRS})
	LINK_LIBRARIES(${DBUSGLIB_LIBRARIES})
ENDIF(DBUSGLIB_FOUND)#

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h IMMEDIATE @ONLY)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src)

ADD_SUBDIRECTORY(src)